# Deep-Collison-Checker

./: .gitignore  .gitmodules  ColliNet.code-workspace  LICENSE  README.md
Myhal_Simulator/sim_melodic_ws/src/dashboard/: CMakeLists.txt
Myhal_Simulator/sim_melodic_ws/src/dashboard/src/: assessor.py
Myhal_Simulator/sim_melodic_ws/src/dashboard/src/utilities/: bag_tools.py  math_utilities.py
Myhal_Simulator/sim_melodic_ws/src/jackal_velodyne/: nodelets.xml  package.xml
Myhal_Simulator/sim_melodic_ws/src/jackal_velodyne/launch/: jackal_testing.launch  myhal_sim_test.launch  p1.launch
Myhal_Simulator/sim_melodic_ws/src/jackal_velodyne/launch/include/: amcl.launch  move_base.launch  run2.rviz
Myhal_Simulator/sim_melodic_ws/src/jackal_velodyne/maps/: myhal_map_V5.yaml
Myhal_Simulator/sim_melodic_ws/src/jackal_velodyne/params/: teb_local_planner_params_old.yaml
Myhal_Simulator/sim_melodic_ws/src/jackal_velodyne/params/map_nav_params/: global_costmap_params.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/: CMakeLists.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/models/20x20box/: model.config
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/models/myhal_V3/: model.config
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/models/small_point/: model.config  model.sdf
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/Flow1_params/: plugin_params.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/Flow2_params/: model_params.yaml  myhal_walls.ply
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/Flow3_params/: scenario_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/Frog1_params/: common_vehicle_params.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/Frog2_params/: room_params_V2.yaml  scenario_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/RandBounce_params/: common_vehicle_params.yaml  room_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/RandCustom_params/: camera_params.yaml  common_vehicle_params.yaml  custom_simulation_params.yaml  model_params.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/RandFlow_params/: common_vehicle_params.yaml  scenario_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/RandWand_params/: common_vehicle_params.yaml  room_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/Sc1_params/: custom_simulation_params.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/Sc2_params/: room_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/Sc4_params/: camera_params.yaml  room_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/custom_params_0/: room_params_V2.yaml  scenario_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/custom_params_mgsa/: camera_params.yaml  custom_simulation_params.yaml  room_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/default_params/: plugin_params.yaml  room_params_V2.yaml  scenario_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/params/mapping_params/: camera_params.yaml  room_params_V2.yaml
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/src/: navigation_goals_V2.cpp  puppeteer.hh  tests.cpp  vehicles.cpp  vehicles.hh  world_factory.hh
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/src/include/: Perlin.h  flowfield.cpp  frame.hh  parse_tour.hh  priority_queue.hh  quadtree.cpp  utilities.cpp
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/A_short/: map.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/B_tour/: map.txt  map_flow.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/C_tour/: map.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/N_tour/: map.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/frog_tour_1/: map_flow.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/frog_tour_2/: map.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/mapping_tour/: map.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/med_test/: map.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/mgsa_tour/: map.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/small_tour/: map.txt
Myhal_Simulator/sim_melodic_ws/src/myhal_simulator/tours/tri_test/: map.txt
Myhal_Simulator/simu_melodic_ws/src/jackal_velodyne/: CMakeLists.txt
Myhal_Simulator/simu_melodic_ws/src/jackal_velodyne/launch/: hugues_test.launch  p2.launch  visualize.launch
Myhal_Simulator/simu_melodic_ws/src/jackal_velodyne/launch/include/: control.launch  point_slam.launch  pointcloud_filter2.launch  run.rviz  visualize.rviz
Myhal_Simulator/simu_melodic_ws/src/jackal_velodyne/maps/: myhal_map_V3.yaml
Myhal_Simulator/simu_melodic_ws/src/jackal_velodyne/params/: base_local_planner_params.yaml  costmap_common_params.yaml  teb_local_planner_params.yaml
Myhal_Simulator/simu_melodic_ws/src/jackal_velodyne/params/map_nav_params/: local_costmap_params.yaml
Myhal_Simulator/simu_melodic_ws/src/jackal_velodyne/src/: camera_controller.cpp  camera_controller.hh  diagnostics.hh  pcl_filter_nodelet.cpp  pcl_filter_nodelet.h
Myhal_Simulator/simu_melodic_ws/src/jackal_velodyne/urdf/: VLP-16.urdf.xacro  jackal_velodyne.urdf.xacro
Myhal_Simulator/simu_melodic_ws/src/myhal_simulator/: package.xml
Myhal_Simulator/simu_melodic_ws/src/myhal_simulator/launch/: jackal_spawn.launch  localization.launch  navigation.launch  p1.launch  p1_gzclient.launch  p1_rviz.launch  p2.launch
Myhal_Simulator/simu_melodic_ws/src/myhal_simulator/models/10x10Box/: model.config  (+1 more)
Myhal_Simulator/simu_melodic_ws/src/myhal_simulator/src/: custom_velodyne.cpp  custom_velodyne.hh  navigation_goals_V2.cpp  puppeteer.cpp  puppeteer.hh  vehicles.cpp  vehicles.hh  world_entities.cpp  world_entities.hh  world_factory.cpp  world_factory.hh
Myhal_Simulator/simu_melodic_ws/src/myhal_simulator/worlds/: myhal_sim.world  myhal_template.txt
(+251 files in other folders)
