<?xml version="1.0"?>
<package>
  <name>jackal_velodyne</name>
  <version>1.0.0</version>
  <description>Jackal-Velodyne-Simulator</description>

  <maintainer email="ben.agro@mail.utoronto.ca">Ben Agro</maintainer>

  <license>TODO</license>

  <author >Ben Agro</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <build_depend>rosbag</build_depend>
  <run_depend>rosbag</run_depend>
  
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  
  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

<build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>

<build_depend>laser_geometry</build_depend>
<run_depend>laser_geometry</run_depend>

    <build_depend>message_filters</build_depend>
    <run_depend>message_filters</run_depend>

    <build_depend>nodelet</build_depend>
    <run_depend>nodelet</run_depend>

    <build_depend>tf2</build_depend>
    <run_depend>tf2</run_depend>

    <build_depend>tf2_ros</build_depend>
    <run_depend>tf2_ros</run_depend>

    <build_depend>tf2_sensor_msgs</build_depend>
    <run_depend>tf2_sensor_msgs</run_depend>

    
<build_depend>gazebo_plugins</build_depend>
<run_depend>gazebo_plugins</run_depend>

<build_depend>gazebo_ros</build_depend>
<run_depend>gazebo_ros</run_depend>

<export>
  <nodelet plugin="${prefix}/nodelets.xml" />
</export>


</package>
